manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-blank-html
spec:
  replicas: 2
  selector:
    matchLabels:
      run: k8s-blank-html
  template:
    metadata:
      labels:
        run: k8s-blank-html
    spec:
      containers:
        - name: k8s-blank-html
          image: httpd:2.4
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: 200m
          securityContext:
            allowPrivilegeEscalation: false
