manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-blank-html
  labels:
    run: k8s-blank-html
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    run: k8s-blank-html
