manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-blank-html-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts: fluxpoc.daglab.dev
  secretName: letsencrypt-nginx
  rules:
    - host: fluxpoc.daglab.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: k8s-blank-html
                port:
                  number: 443
